<resources>
    <string name="app_name">Soccer Counter</string>

    <string name="local">Local</string>
    <string name="visitor">Visitor</string>
    <string name="goals">Goals</string>
    <string name="goal">Goal</string>
    <string name="red_cards">Red Cards</string>
    <string name="red_card">Red</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="yellow_card">Yellow</string>
    <string name="penalties">Penalties</string>
    <string name="penalty">Penalty</string>
    <string name="reset">Reset</string>
    <string name="plus_character">+</string>
    <string name="minus_character">-</string>
    <string name="zero">0</string>

</resources>
