<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.soccercounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <LinearLayout style="@style/TeamLayout">

            <TextView
                style="@style/Title1"
                android:text="@string/local" />

            <TextView
                style="@style/Title2"
                android:text="@string/goals" />

            <TextView
                android:id="@+id/local_goals_textView"
                style="@style/CounterGoals"
                android:text="@string/zero" />

            <TextView
                style="@style/Title2"
                android:text="@string/red_cards" />

            <TextView
                android:id="@+id/local_red_cards_textView"
                style="@style/CounterCards"
                android:text="@string/zero" />

            <TextView
                style="@style/Title2"
                android:text="@string/yellow_cards" />

            <TextView
                android:id="@+id/local_yellow_cards_textView"
                style="@style/CounterCards"
                android:text="@string/zero" />

            <TextView
                style="@style/Title2"
                android:text="@string/penalties" />

            <TextView
                android:id="@+id/local_penalties_textView"
                style="@style/CounterCards"
                android:text="@string/zero" />

            <LinearLayout style="@style/LayoutRadio">

                <RadioGroup
                    android:id="@+id/local_radio_group"
                    style="@style/RadioGroup">

                    <!--android:onClick="onRadioButtonClicked"-->

                    <RadioButton
                        android:id="@+id/local_goals_radio"
                        style="@style/Radio"
                        android:checked="true"
                        android:text="@string/goal" />

                    <RadioButton
                        android:id="@+id/local_red_cards_radio"
                        style="@style/Radio"
                        android:text="@string/red_card" />

                    <RadioButton
                        android:id="@+id/local_yellow_cards_radio"
                        style="@style/Radio"
                        android:text="@string/yellow_card" />

                    <RadioButton
                        android:id="@+id/local_penalties_radio"
                        style="@style/Radio"
                        android:text="@string/penalty" />
                </RadioGroup>

                <LinearLayout style="@style/LayoutButtons">

                    <Button
                        android:id="@+id/local_plus_button"
                        style="@style/Button1"
                        android:onClick="onButtonClicked"
                        android:text="@string/plus_character" />

                    <Button
                        android:id="@+id/local_minus_button"
                        style="@style/Button1"
                        android:onClick="onButtonClicked"
                        android:text="@string/minus_character" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout style="@style/verticalLine">

        </LinearLayout>

        <LinearLayout style="@style/TeamLayout">

            <TextView
                style="@style/Title1"
                android:text="@string/visitor" />

            <TextView
                style="@style/Title2"
                android:text="@string/goals" />

            <TextView
                android:id="@+id/visitor_goals_textView"
                style="@style/CounterGoals"
                android:text="@string/zero" />

            <TextView
                style="@style/Title2"
                android:text="@string/red_cards" />

            <TextView
                android:id="@+id/visitor_red_cards_textView"
                style="@style/CounterCards"
                android:text="@string/zero" />

            <TextView
                style="@style/Title2"
                android:text="@string/yellow_cards" />

            <TextView
                android:id="@+id/visitor_yellow_cards_textView"
                style="@style/CounterCards"
                android:text="@string/zero" />

            <TextView
                style="@style/Title2"
                android:text="@string/penalties" />

            <TextView
                android:id="@+id/visitor_penalties_textView"
                style="@style/CounterCards"
                android:text="@string/zero" />

            <LinearLayout style="@style/LayoutRadio">

                <RadioGroup
                    android:id="@+id/visitor_radio_group"
                    style="@style/RadioGroup">

                    <RadioButton
                        android:id="@+id/visitor_goals_radio"
                        style="@style/Radio"
                        android:checked="true"
                        android:text="@string/goals" />

                    <RadioButton
                        android:id="@+id/visitor_red_cards_radio"
                        style="@style/Radio"
                        android:text="@string/red_card" />

                    <RadioButton
                        android:id="@+id/visitor_yellow_cards_radio"
                        style="@style/Radio"
                        android:text="@string/yellow_card" />

                    <RadioButton
                        android:id="@+id/visitor_penalties_radio"
                        style="@style/Radio"
                        android:text="@string/penalty" />
                </RadioGroup>

                <LinearLayout style="@style/LayoutButtons">

                    <Button
                        android:id="@+id/visitor_plus_button"
                        style="@style/Button1"
                        android:onClick="onButtonClicked"
                        android:text="@string/plus_character" />

                    <Button
                        android:id="@+id/visitor_minus_button"
                        style="@style/Button1"
                        android:onClick="onButtonClicked"
                        android:text="@string/minus_character" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        style="@style/ButtonReset"
        android:layout_marginTop="8dp"
        android:onClick="onButtonClicked"
        android:text="@string/reset" />

</LinearLayout>
